Created the javax.servlet dependency

--- a/Admin_Panel/pom.xml
+++ b/Admin_Panel/pom.xml
@@ -1,18 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Admin_Panel</groupId>
-  <artifactId>Admin_Panel</artifactId>
+  <groupId>newproject</groupId>
+  <artifactId>newproject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   
   <dependencies>
-	 <dependency>
+<dependency>
     <groupId>mysql</groupId>
     <artifactId>mysql-connector-java</artifactId>
     <version>8.0.23</version>
 </dependency>
-  </dependencies>
-  
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>4.0.1</version>
+    <scope>provided</scope>
+</dependency>
+
+</dependencies>
   <build>
     <plugins>
       <plugin>
