--- a/E-commerce-fornt-end/pom.xml
+++ b/E-commerce-fornt-end/pom.xml
@@ -4,6 +4,16 @@
   <artifactId>E-commerce-front-end</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+
+  <!-- MySQL JDBC version 8.0.23 -->
+	<dependencies>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.23</version>
+		</dependency>
+	</dependencies>
+  
   <build>
     <plugins>
       <plugin>
